Fix overflow and center issues

--- a/assets/scss/layout/_body.scss
+++ b/assets/scss/layout/_body.scss
@@ -1,6 +1,7 @@
 body.site {
   position: relative;
   row-gap: 6.33em;
+  overflow-x: hidden;
 }
 
 .project {
