--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -68,7 +68,6 @@
     position: absolute;
     min-width: 100vw;
     padding: 10% $padding-lr-size;
-    overflow: hidden;
 
     &-logo {
       width: Min(192px, 38%);
